<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="16dp"
              tools:context=".activities.main.fragment.liked.LikedFragment"
              android:orientation="vertical">

    <!--
    TextView
    R.id.recycler_view(li_concert*)

    -->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="12sp"
            android:text="@string/txt_liked"/>

    <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_liked_artist"
                android:text="@string/txt_liked_tag1"
                android:textSize="20sp"
                android:textColor="@color/textTagDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_liked_theme"
                android:text="@string/txt_liked_tag2"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/textTagDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_liked_concert"
                android:text="@string/txt_liked_tag3"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/textTagDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
    />


</LinearLayout>