<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/shape_background_gradation"
             tools:context=".activities.main.fragment.mypage.SettingFragment">

    <LinearLayout
            android:paddingStart="15dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <Button
                android:id="@+id/btn_setting_back"
                android:background="@drawable/back_arrow"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        <TextView
                android:text="설정"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginStart="6.9dp"
                android:textStyle="bold"
                android:paddingVertical="25dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:background="@color/white_0_9"
                    android:layout_width="match_parent"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_1"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:background="@color/white_0_9"
                    android:layout_marginTop="3dp"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_2"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="60dp"
                    android:background="@color/white_0_9"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_3"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:background="@color/white_0_9"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_4"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:background="@color/white_0_9"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_5"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="3dp"
                    android:background="@color/white_0_9"
                    android:paddingHorizontal="16dp"
                    android:weightSum="10"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                <TextView
                        android:layout_weight="9"
                        android:paddingVertical="23dp"
                        android:text="@string/txt_setting_6"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>